Tests/test.txt
The deck is empty! Reshuffling the discard pile...
Error: No cards left to draw. There is no way this should happen.
Traceback (most recent call last):
  File "/workspaces/Programming-Class-Project/CtrlUnoArcadeNT.py", line 1047, in <module>
    main_menu()
  File "/workspaces/Programming-Class-Project/CtrlUnoArcadeNT.py", line 1037, in main_menu
    tres_main()
  File "/workspaces/Programming-Class-Project/CtrlUnoArcadeNT.py", line 918, in tres_main
    game_loop()
  File "/workspaces/Programming-Class-Project/CtrlUnoArcadeNT.py", line 771, in game_loop
    drawn_card = draw_card()
                 ^^^^^^^^^^^
  File "/workspaces/Programming-Class-Project/CtrlUnoArcadeNT.py", line 398, in draw_card
    if current_player == 1:
       ^^^^^^^^^^^^^^
NameError: name 'current_player' is not defined
@EvilPatrick06 ➜ /workspaces/Programming-Class-Project (Testing) $ d